--- a/templates/header.html
+++ b/templates/header.html
@@ -20,8 +20,11 @@
 		<script type="text/javascript" src="/static/global.js"></script>
 		<meta name="viewport" content="width=device-width,initial-scale = 1.0, maximum-scale=1.0,user-scalable=no" />
 		{{if .Header.MetaDesc}}<meta name="description" content="{{.Header.MetaDesc}}" />{{end}}
+		{{/** TODO: Have page / forum / topic level tags and descriptions below as-well **/}}
+		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="{{.Header.Site.Name}}">
 		<meta property="og:title" content="{{.Title}} | {{.Header.Site.Name}}">
+		<meta name="twitter:title" content="{{.Title}} | {{.Header.Site.Name}}" />
 	</head>
 	<body>
 		{{if not .CurrentUser.IsSuperMod}}<style>.supermod_only { display: none !important; }</style>{{end}}
