Basic proxy IP support.
Switched out a couple of <a>s in the Control Panel with <h1>s, we might want to use <h2> here instead.
Added graphs for Nox.
Tweaked header markup for Nox.
Added support for live topic list to Nox.
Added styling for stickies on Nox.
Fixed topic list text overflow on Nox.

--- a/templates/panel_dashboard.html
+++ b/templates/panel_dashboard.html
@@ -3,7 +3,7 @@
 {{template "panel_menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
 		<div class="colstack_item colstack_head">
-			<div class="rowitem"><a>{{lang "panel_dashboard_head"}}</a></div>
+			<div class="rowitem"><h1>{{lang "panel_dashboard_head"}}</h1></div>
 		</div>
 		<div id="panel_dashboard" class="colstack_grid">
 {{range .GridItems}}
