--- a/templates/panel_debug.html
+++ b/templates/panel_debug.html
@@ -3,7 +3,7 @@
 {{template "panel_menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
 		<div class="colstack_item colstack_head">
-			<div class="rowitem"><a>{{lang "panel_debug_head"}}</a></div>
+			<div class="rowitem"><h1>{{lang "panel_debug_head"}}</h1></div>
 		</div>
 		<div id="panel_debug" class="colstack_grid">
 			<div class="grid_item grid_stat"><span>{{lang "panel_debug_uptime_label"}}</span></div>
