--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -44,6 +44,13 @@
 	padding-bottom: 24px;
 	padding-left: 24px;
 }
+.colstack_right .colstack_head {
+	margin-bottom: 4px;
+}
+.colstack_right .colstack_head h1 {
+	font-size: 21px;
+	color: #BBBBBB;
+}
 .colstack_right .colstack_item.the_form {
 	background-color: #555555;
 }
@@ -97,4 +104,23 @@ button, .formbutton {
 #themeSelector select {
 	background: rgb(90,90,90);
     color: rgb(200,200,200);
+}
+
+.colstack_graph_holder {
+	background-color: #555555;
+	border-radius: 3px;
+	padding: 16px;
+	padding-bottom: 0px;
+	padding-left: 0px;
+}
+.colstack_graph_holder .ct-label {
+	color: rgb(195,195,195);
+	font-size: 13px;
+	white-space: nowrap;
+}
+.colstack_graph_holder .ct-horizontal {
+	margin-top: 3px;
+}
+.colstack_graph_holder .ct-grid {
+	stroke: rgb(125,125,125);
 }
