Made it harder to parse the antispam script. Used Unicode magic to make it harder to parse the antispam trap question. Added more shady email substrings. Tweaked the contributing guidelines, no more await allowed... For now. Might already have Git, note that. Added the the_form class to the login form, registration form and login mfa form. Made the titles on the Control Panel Dashboard and Debug page a little softer on Cosora.
Added the quick topic form to Nox.
Made the topic pages somewhat usable on Nox.

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 	<div class="rowblock rowhead">
 		<div class="rowitem"><h1>{{lang "login_head"}}</h1></div>
 	</div>
-	<div class="rowblock">
+	<div class="rowblock the_form">
 		<form action="/accounts/login/submit/" method="post">
 			<div class="formrow login_name_row">
 				<div class="formitem formlabel"><a id="login_name_label">{{lang "login_account_name"}}</a></div>
