--- a/templates/login_mfa_verify.html
+++ b/templates/login_mfa_verify.html
@@ -3,7 +3,7 @@
 	<div class="rowblock rowhead">
 		<div class="rowitem"><h1>{{lang "login_mfa_verify_head"}}</h1></div>
 	</div>
-	<div class="rowblock">
+	<div class="rowblock the_form">
 		<form action="/accounts/mfa_verify/submit/" method="post">
 			<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>{{lang "login_mfa_verify_explanation"}}</a></div>
