--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -109,7 +109,12 @@ li a {
 .sidebar {
 	width: 320px;
 }
-.rowblock:not(.topic_list):not(.rowhead):not(.opthead) .rowitem {
+.the_form {
+	border-radius: 3px;
+	background-color: #444444;
+	padding: 16px;
+}
+.rowblock:not(.topic_list):not(.rowhead):not(.opthead) .rowitem:not(.post_item) {
 	border-radius: 3px;
 	background-color: #444444;
 	display: flex;
@@ -117,11 +122,6 @@ li a {
 }
 .sidebar .rowblock:not(.topic_list):not(.rowhead):not(.opthead) .rowitem {
 	margin-left: 12px;
-}
-.colstack_right .colstack_item.the_form {
-	border-radius: 3px;
-	background-color: #444444;
-	padding: 16px;
 }
 .colstack_right .colstack_item:not(.colstack_head):not(.rowhead) .rowitem {
 	border-radius: 3px;
@@ -175,6 +175,50 @@ h2 {
 	margin-left: 8px;
 }
 
+.topic_create_form {
+	display: flex !important;
+}
+.quick_reply_form, .topic_reply_form, .topic_create_form {
+	background-color: #444444;
+	border-radius: 3px;
+}
+.quick_create_form {
+	margin-bottom: 8px;
+	padding: 16px;
+}
+.quick_create_form .little_row_avatar {
+	border-radius: 36px;
+	margin-left: 4px;
+	margin-right: 20px;
+	height: 48px;
+	width: 48px;
+}
+.quick_create_form .main_form {
+	width: 80%;
+}
+.quick_create_form .topic_meta {
+	display: flex;
+}
+.quick_create_form .topic_meta .topic_name_row {
+	margin-left: 8px;
+	margin-bottom: 8px;
+	width: 100%;
+}
+.quick_create_form .topic_meta .topic_name_row input {
+	width: 100%;
+}
+.quick_create_form .topic_content_row textarea {
+	width: 100%;
+	height: 60px;
+}
+.quick_create_form .quick_button_row .formitem {
+	display: flex;
+	margin-top: 6px;
+}
+.quick_create_form .quick_button_row button, .quick_create_form .quick_button_row label {
+	margin-right: 8px;
+}
+
 .more_topic_block_initial {
 	display: none;
 }
@@ -183,6 +227,9 @@ h2 {
 }
 .hide_ajax_topic {
 	display: none !important;
+}
+.auto_hide, .show_on_edit {
+	display: none;
 }
 
 .topic_row:not(:last-child) {
@@ -355,6 +402,56 @@ button, .formbutton {
 }
 
 .colstack {
+	display: flex;
+}
+
+.post_item {
+	display: flex;
+	margin-bottom: 12px;
+}
+.userinfo {
+	margin-right: 12px;
+	padding: 16px;
+	background-color: #444444;
+	border-radius: 3px;
+	width: 120px;
+	display: flex;
+	flex-direction: column;
+}
+.avatar_item {
+	border-radius: 24px;
+	height: 48px;
+	width: 48px;
+	background-size: 56px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.the_name {
+	margin-left: auto;
+	margin-right: auto;
+	white-space: nowrap;
+	display: block;
+	font-size: 17px;
+    margin-top: 8px;
+    line-height: 16px;
+}
+.tag_block {
+	display: flex;
+}
+.post_tag {
+	white-space: nowrap;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+.post_item .content_container {
+	padding: 16px;
+	background-color: #444444;
+	border-radius: 3px;
+	width: 100%;
+}
+
+.topic_reply_container {
 	display: flex;
 }
 
