--- a/templates/panel_inner_menu.html
+++ b/templates/panel_inner_menu.html
@@ -25,8 +25,8 @@
 		<a href="/panel/themes/">{{lang "panel_menu_themes"}}</a> <a class="menu_stats" href="#">({{.Stats.Themes}})</a>
 	</div>
 	{{if eq .Zone "themes"}}
-		<div class="rowitem passive submenu"><a href="/panel/themes/menus/">Menus</a></div>
-		<div class="rowitem passive submenu"><a href="#">Widgets</a></div>
+		<div class="rowitem passive submenu"><a href="/panel/themes/menus/">{{lang "panel_menu_menus"}}</a></div>
+		<div class="rowitem passive submenu"><a href="#">{{lang "panel_menu_widgets"}}</a></div>
 	{{end}}
 	{{end}}
 </div>
