--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 				<div class="formitem formlabel"><a id="login_password_label">{{lang "login_account_password"}}</a></div>
 				<div class="formitem"><input name="password" type="password" autocomplete="current-password" placeholder="*****" aria-labelledby="login_password_label" required /></div>
 			</div>
-			<div class="formrow login_button_row">
+			<div class="formrow login_button_row form_button_row">
 				<div class="formitem"><button name="login-button" class="formbutton">{{lang "login_submit_button"}}</button></div>
 				<div class="formitem dont_have_account">{{lang "login_no_account"}}</div>
 			</div>
