--- a/templates/panel_group_edit.html
+++ b/templates/panel_group_edit.html
@@ -15,7 +15,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{.Name}}{{lang "panel_group_head_suffix"}}</h1></div>
 	</div>
-	<div id="panel_group" class="colstack_item">
+	<div id="panel_group" class="colstack_item the_form">
 		<form action="/panel/groups/edit/submit/{{.ID}}?session={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_group_name"}}</a></div>
@@ -38,7 +38,7 @@
 			<div class="formitem formlabel"><a>{{lang "panel_group_tag"}}</a></div>
 			<div class="formitem"><input name="group-tag" type="text" value="{{.Tag}}" placeholder="{{lang "panel_group_tag_placeholder"}}" /></div>
 		</div>
-		<div class="formrow">
+		<div class="formrow form_button_row">
 			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_group_update_button"}}</button></div>
 		</div>
 		</form>
