--- a/templates/panel_group_edit_perms.html
+++ b/templates/panel_group_edit_perms.html
@@ -2,18 +2,18 @@
 <div class="colstack panel_stack">
 <nav class="colstack_left" aria-label="The control panel menu">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a href="/panel/groups/edit/{{.ID}}">Group Editor</a></div>
+		<div class="rowitem"><a href="/panel/groups/edit/{{.ID}}">{{lang "panel_group_menu_head"}}</a></div>
 	</div>
 	<div class="colstack_item rowmenu">
-		<div class="rowitem passive"><a href="/panel/groups/edit/{{.ID}}">General</a></div>
-		<div class="rowitem passive"><a>Promotions</a></div>
-		<div class="rowitem passive"><a href="/panel/groups/edit/perms/{{.ID}}">Permissions</a></div>
+		<div class="rowitem passive"><a href="/panel/groups/edit/{{.ID}}">{{lang "panel_group_menu_general"}}</a></div>
+		<div class="rowitem passive"><a>{{lang "panel_group_menu_promotions"}}</a></div>
+		<div class="rowitem passive"><a href="/panel/groups/edit/perms/{{.ID}}">{{lang "panel_group_menu_permissions"}}</a></div>
 	</div>
 {{template "panel_inner_menu.html" . }}
 </nav>
 <main class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{.Name}} Group</h1></div>
+		<div class="rowitem"><h1>{{.Name}}{{lang "panel_group_head_suffix"}}</h1></div>
 	</div>
 	<form action="/panel/groups/edit/perms/submit/{{.ID}}?session={{.CurrentUser.Session}}" method="post">
 	{{if .CurrentUser.Perms.EditGroupLocalPerms}}
@@ -24,21 +24,21 @@
 				<a>{{.LangStr}}</a>
 				<div class="to_right">
 					<select name="group-perm-{{.Name}}">
-						<option{{if .Toggle}} selected{{end}} value=1>Yes</option>
-						<option{{if not .Toggle}} selected{{end}} value=0>No</option>
+						<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
+						<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
 					</select>
 				</div>
 			</div>
 		</div>
 		{{end}}
 		<div class="formrow">
-			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">Update Group</button></div>
+			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_group_update_button"}}</button></div>
 		</div>
 	</div>
 	{{end}}
 	{{if .CurrentUser.Perms.EditGroupGlobalPerms}}
 	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>Extended Permissions</h1></div>
+		<div class="rowitem"><h1>{{lang "panel_group_extended_permissions"}}</h1></div>
 	</div>
 	<div class="colstack_item rowlist formlist panel_group_perms">
 		{{range .GlobalPerms}}
@@ -47,15 +47,15 @@
 				<a>{{.LangStr}}</a>
 				<div class="to_right">
 					<select name="group-perm-{{.Name}}">
-						<option{{if .Toggle}} selected{{end}} value=1>Yes</option>
-						<option{{if not .Toggle}} selected{{end}} value=0>No</option>
+						<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
+						<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
 					</select>
 				</div>
 			</div>
 		</div>
 		{{end}}
 		<div class="formrow">
-			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">Update Group</button></div>
+			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_group_update_button"}}</button></div>
 		</div>
 	</div>
 	{{end}}
