--- a/templates/topics.html
+++ b/templates/topics.html
@@ -23,7 +23,7 @@
 <div class="mod_floater auto_hide">
 	<form method="post">
 	<div class="mod_floater_head">
-		<span>{{lang "topic_list.what_to_do"}}</span>
+		<span></span>
 	</div>
 	<div class="mod_floater_body">
 		<select class="mod_floater_options">
