--- a/templates/topics_topic.html
+++ b/templates/topics_topic.html
@@ -1,5 +1,5 @@
-<div class="topic_row" data-tid="{{.ID}}">
-	<div class="rowitem topic_left passive datarow {{if .Sticky}}topic_sticky{{else if .IsClosed}}topic_closed{{end}}">
+<div class="topic_row{{if .Sticky}} topic_sticky{{else if .IsClosed}} topic_closed{{end}}" data-tid="{{.ID}}">
+	<div class="rowitem topic_left passive datarow">
 		<span class="selector"></span>
 		<a href="{{.Creator.Link}}"><img src="{{.Creator.Avatar}}" height="64" alt="{{.Creator.Name}}'s Avatar" title="{{.Creator.Name}}'s Avatar" /></a>
 		<span class="topic_inner_left">
@@ -21,7 +21,7 @@
 			<span class="likeCount">{{.LikeCount}}</span>
 		</div>
 	</div>
-	<div class="rowitem topic_right passive datarow {{if .Sticky}}topic_sticky{{else if .IsClosed}} topic_closed{{end}}">
+	<div class="rowitem topic_right passive datarow">
 		<div class="topic_right_inside">
 			<a href="{{.LastUser.Link}}"><img src="{{.LastUser.Avatar}}" height="64" alt="{{.LastUser.Name}}'s Avatar" title="{{.LastUser.Name}}'s Avatar" /></a>
 			<span>
