--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -542,10 +542,10 @@ li a {
 .topic_status_closed {
 	margin-left: auto;
 }
-.topic_sticky {
+.topic_sticky .topic_left, .topic_sticky .topic_right {
 	background-color: rgb(255,255,234);
 }
-.topic_closed {
+.topic_closed .topic_left, .topic_closed .topic_right {
 	background-color: rgb(248,248,248);
 }
 
