--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -568,10 +568,10 @@ input, select {
 	font-size: 0.90em;
 	margin-bottom: -2px;
 }
-.topic_sticky {
+.topic_sticky .topic_left, .topic_sticky .topic_right {
 	background-color: rgb(255,255,234);
 }
-.topic_closed {
+.topic_closed .topic_left, .topic_closed .topic_right {
 	background-color: rgb(248,248,248);
 }
 .topic_sticky_head {
