--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -414,7 +414,7 @@ h2 {
 	display: block;
 }
 
-input, select, button, .formbutton, textarea {
+input, select, button, .formbutton, .panel_right_button, textarea {
 	border-radius: 3px;
 	background: rgb(90,90,90);
 	color: rgb(200,200,200);
@@ -434,7 +434,7 @@ input {
 	padding-bottom: 3px;
 	font-size: 16px;
 }
-button, .formbutton {
+button, .formbutton, .panel_right_button {
 	background: rgb(110,110,210);
 	color: rgb(250,250,250);
 	font-family: "Segoe UI";
