--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -83,7 +83,7 @@
 	padding: 12px;
 }
 
-.to_right {
+.to_right, .panel_buttons {
 	margin-left: auto;
 }
 
@@ -118,8 +118,17 @@ button, .formbutton {
 	/*background: rgb(110,110,210);
 	color: rgb(250,250,250);*/
 }
-button, .formbutton {
+button, .formbutton, .panel_right_button {
 	background: rgb(100,100,200);
+}
+.panel_right_button {
+	margin-left: 2px;
+}
+.edit_button:after {
+	content: "{{index .Phrases "panel_edit_button_text"}}";
+}
+.delete_button:after {
+	content: "{{index .Phrases "panel_delete_button_text"}}";
 }
 #themeSelector select {
 	background: rgb(90,90,90);
